@@ -190,6 +190,7 @@ function sqimap_fgets($imap_stream) {
             $offset = strlen($results) - 1;
         }
         $results .= $read;
+#sm_print_r("Trace from line " . __LINE__, $results);
     }
     return $results;
 }
@@ -251,6 +252,7 @@ function sqimap_fread($imap_stream,$iSize,$filter=false,
         } else {    
             $results .= $sRead;
         }
+#sm_print_r("Trace from line " . __LINE__, $results);
     }
     return $results;       
 }        
